Amélioration de la configuration Docker et des scripts d'initialisation. Ajout de la gestion des logs dans l'application Flask. Refactorisation des modèles pour une meilleure cohérence des noms de tables. Ajout de nouvelles routes et composants pour la gestion des tournois et des utilisateurs, ainsi que des améliorations dans l'interface utilisateur.

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,7 +1,7 @@
 FROM python:3.9
 
-# Installer les dépendances système nécessaires pour mysqlclient
-RUN apt-get update && apt-get install -y default-libmysqlclient-dev build-essential
+# Installer les dépendances système nécessaires pour mysqlclient et mysqladmin
+RUN apt-get update && apt-get install -y default-libmysqlclient-dev build-essential default-mysql-client
 
 WORKDIR /app
 
@@ -11,6 +11,10 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . .
 
+# Rendre le script d'initialisation exécutable
+RUN chmod +x /app/scripts/docker_init.sh
+
 EXPOSE 5000
 
-CMD ["gunicorn", "--bind", "0.0.0.0:5000", "wsgi:app"]
+# Utiliser un script de démarrage pour initialiser la base de données avant de démarrer l'application
+CMD ["sh", "-c", "/app/scripts/docker_init.sh && gunicorn --bind 0.0.0.0:5000 --log-level debug --access-logfile - --error-logfile - wsgi:app"]
