--- a/frontend/.prettierrc
+++ b/frontend/.prettierrc
@@ -1,10 +1,10 @@
 {
   "semi": true,
-  "tabWidth": 2,
-  "printWidth": 100,
-  "singleQuote": true,
   "trailingComma": "es5",
+  "singleQuote": true,
+  "printWidth": 100,
+  "tabWidth": 2,
+  "useTabs": false,
   "bracketSpacing": true,
-  "arrowParens": "avoid",
-  "bracketSameLine": false
+  "arrowParens": "avoid"
 }
