--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,13 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
     "@headlessui/react": "^1.7.15",
     "@heroicons/react": "^2.0.18",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.13.0",
     "@types/node": "^16.18.36",
-    "axios": "^1.4.0",
+    "axios": "^1.8.4",
+    "history": "^5.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.13.0",
+    "react-router-dom": "^6.30.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5"
   },
@@ -52,6 +57,7 @@
     "eslint-plugin-prettier": "^5.2.5",
     "postcss": "^8.4.24",
     "prettier": "^3.5.3",
+    "sharp": "^0.34.1",
     "tailwindcss": "^3.3.2"
   }
 }
